--- a/Config.in
+++ b/Config.in
@@ -60,3 +60,5 @@ source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/metrics_daemon/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/resource_monitor/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/cmph/Config.in"
 source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/bcm_wrapper/Config.in"
+source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/j1939_protocol/Config.in"
+source "$BR2_EXTERNAL_piksi_buildroot_PATH/package/sbp_j1939_bridge/Config.in"
