--- a/configs/piksiv3_unprotected_defconfig
+++ b/configs/piksiv3_unprotected_defconfig
@@ -120,5 +120,7 @@ BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 BR2_PACKAGE_J1939_PROTOCOL=y
+BR2_PACKAGE_SBP_ANPP_BRIDGE=y
+BR2_PACKAGE_ANPP_PROTOCOL=y
 BR2_PACKAGE_SBP_J1939_BRIDGE=y
 BR2_PACKAGE_RELEASE_LOCKDOWN=y
