--- a/configs/piksiv3_release_defconfig
+++ b/configs/piksiv3_release_defconfig
@@ -120,3 +120,4 @@ BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_PIKSI_INS=y
 BR2_PACKAGE_BUILD_TOOLS=y
 BR2_PACKAGE_RELEASE_LOCKDOWN=y
+BR2_PACKAGE_HEADING_FORWARDER=y
