--- a/configs/piksiv3_unprotected_defconfig
+++ b/configs/piksiv3_unprotected_defconfig
@@ -118,3 +118,4 @@ BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
 BR2_PACKAGE_RELEASE_LOCKDOWN=y
+BR2_PACKAGE_HEADING_FORWARDER=y
