--- a/configs/piksiv3_sdk_defconfig
+++ b/configs/piksiv3_sdk_defconfig
@@ -117,5 +117,6 @@ BR2_PACKAGE_OTA_DAEMON=y
 BR2_PACKAGE_METRICS_DAEMON=y
 BR2_PACKAGE_RESOURCE_MONITOR=y
 BR2_PACKAGE_PFW_WELCOME=y
+BR2_PACKAGE_HEADING_FORWARDER=y
 BR2_PACKAGE_SAMPLE_DAEMON=y
 BR2_PACKAGE_PIKSI_DEV_TOOLS=y
