--- a/package/sbp_protocol/src/sbp_router_smoothpose.yml
+++ b/package/sbp_protocol/src/sbp_router_smoothpose.yml
@@ -142,6 +142,11 @@ ports:
         filters:
           - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
           - { action: REJECT }
+      - dst_port: SBP_PORT_HEADING_FORWARD
+        filters:
+          - { action: ACCEPT, prefix: [0x55, 0x0F, 0x02] } # SBP_MSG_BASELINE_HEADING
+          - { action: ACCEPT, prefix: [0x55, 0x0C, 0x02] } # SBP_MSG_BASELINE_NED
+          - { action: REJECT }
 
   - name: SBP_PORT_FILEIO_FIRMWARE
     metric: "sbp/fileio_fw"
