--- a/board/piksiv3/piksiv3_prod.dts
+++ b/board/piksiv3/piksiv3_prod.dts
@@ -55,14 +55,7 @@
 };
 
 &gem0 {
-  status = "okay";
-  phy-mode = "rgmii-id";
-  phy-handle = <&ethernet_phy>;
-
-  ethernet_phy: ethernet-phy@0 {
-    reg = <0>;
-    max-speed = <100>;
-  };
+  status = "disabled";
 };
 
 &qspi {
