--- a/package/sbp_protocol/src/sbp_router_smoothpose.yml
+++ b/package/sbp_protocol/src/sbp_router_smoothpose.yml
@@ -142,6 +142,10 @@ ports:
         filters:
           - { action: ACCEPT, prefix: [0x55, 0x4A, 0x00] } # SBP_MSG_OBS
           - { action: REJECT }
+      - dst_port: SBP_PORT_NAV_DAEMON # This list sends only what Smoothpose needs at present.
+        filters:
+          - { action: ACCEPT, prefix: [0x55, 0x03, 0x09] } # MSG_ODOMETRY **Smoothpose Change**
+          - { action: REJECT }
 
   - name: SBP_PORT_FILEIO_FIRMWARE
     metric: "sbp/fileio_fw"
@@ -169,6 +173,10 @@ ports:
       - dst_port: SBP_PORT_EXTERNAL
         filters:
           - { action: ACCEPT }
+      - dst_port: SBP_PORT_NAV_DAEMON # This list sends only what Smoothpose needs at present.
+        filters:
+          - { action: ACCEPT, prefix: [0x55, 0x03, 0x09] } # MSG_ODOMETRY **Smoothpose Change**
+          - { action: REJECT }
 
   - name: SBP_PORT_SETTINGS_CLIENT
     metric: "sbp/settings_client"
